--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <!-- importing fonts -->
   <!-- font-family: 'Libre Barcode 128 Text', cursive;
 font-family: 'Baloo Tammudu', cursive;
